@@ -6,7 +6,8 @@
 
 \description{Fit a tidal model to a timeseries.}
 
-\usage{tidem(x, t, constituents, latitude=NULL, rc=1, debug =getOption("oceDebug"))}
+\usage{tidem(x, t, constituents, latitude=NULL, rc=1, regress=lm,
+      debug =getOption("oceDebug"))}
 
 \arguments{
 
@@ -29,6 +30,9 @@
     try to infer this from \code{sl}.}
 
   \item{rc}{the value of the coefficient in the Rayleigh criterion.}
+
+  \item{regress}{function to be used for regression, by default \code{\link{lm}}, but could be for
+    example \code{rlm} from the \code{MASS} package.}
 
   \item{debug}{a flag that turns on debugging.  Set to 1 to get a moderate amount of debugging
     information, or to 2 to get more.} 
@@ -165,6 +169,10 @@ summary(m)
   Foreman, M. G. G., Neufeld, E. T., 1991.
   Harmonic tidal analyses of long time series.
   International Hydrographic Review, 68 (1), 95-108.
+
+  Leffler, K. E. and D. A. Jay, 2009.
+  Enhancing tidal harmonic analysis: Robust (hybrid) solutions.
+  Continental Shelf Research, 29(1):78-88.
   
   Pawlowicz, Rich, Bob Beardsley, and Steve Lentz, 2002.
   Classical tidal harmonic analysis including error estimates in MATLAB using \code{T_TIDE}.
